// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default, with only required props should match snapshot 1`] = `
.c0 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: block;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c0::before,
.c0::after {
  box-sizing: border-box;
}

.c4 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  overflow: visible;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline-block;
  max-width: 100%;
}

.c4::-webkit-input-placeholder {
  color: inherit;
  opacity: 0.54;
}

.c4::before,
.c4::after {
  box-sizing: border-box;
}

.c5 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  max-width: 100%;
}

.c5::before,
.c5::after {
  box-sizing: border-box;
}

.c2 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c2::before,
.c2::after {
  box-sizing: border-box;
}

.c1 {
  color: hsl(0,0%,16%);
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 18px;
  line-height: 1.5;
  font-weight: 400;
}

.c1.fi-radio-button-group .fi-radio-button-group_label {
  display: block;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 600;
}

.c1.fi-radio-button-group .fi-radio-button-group_hintText {
  color: hsl(202,7%,40%);
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
}

.c1 .fi-radio-button_container {
  margin-top: 10px;
}

.c1 .fi-radio-button_container.fi-radio-button--large {
  margin-top: 15px;
}

.c3 {
  color: hsl(0,0%,16%);
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 18px;
  line-height: 1.5;
  font-weight: 400;
}

.c3.fi-radio-button .fi-radio-button_hintText {
  display: block;
  padding-left: 26px;
  color: hsl(202,7%,40%);
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
}

.c3.fi-radio-button .fi-radio-button_input {
  opacity: 0;
  position: absolute;
  margin: 8px 0 0 3px;
}

.c3.fi-radio-button .fi-radio-button_input + .fi-radio-button_label {
  position: relative;
  display: inline-block;
  cursor: pointer;
  min-height: 27px;
  line-height: 1.5em;
  padding-left: 26px;
}

.c3.fi-radio-button .fi-radio-button_input + .fi-radio-button_label::before {
  content: '';
  position: absolute;
  display: inline-block;
  left: 0;
  top: 5px;
  width: 16px;
  height: 16px;
  border-radius: 50%;
  border: 1px solid hsl(201,7%,58%);
  background: transparent;
  box-sizing: content-box;
}

.c3.fi-radio-button .fi-radio-button_input + .fi-radio-button_label::after {
  content: '';
  position: absolute;
  display: inline-block;
  left: 5px;
  top: 10px;
  border-radius: 50%;
  width: 8px;
  height: 8px;
}

.c3.fi-radio-button .fi-radio-button_input:checked + .fi-radio-button_label:before {
  border: 1px solid hsl(212,63%,45%);
}

.c3.fi-radio-button .fi-radio-button_input:checked + .fi-radio-button_label:after {
  background: hsl(212,63%,45%);
}

.c3.fi-radio-button .fi-radio-button_input:focus + .fi-radio-button_label::before {
  outline: 0;
  border-radius: 2px;
  box-shadow: 0 0 0 2px hsl(196,77%,44%);
  border-radius: 50%;
}

.c3.fi-radio-button .fi-radio-button_input:disabled + .fi-radio-button_label {
  cursor: not-allowed;
  color: hsl(202,7%,67%);
}

.c3.fi-radio-button .fi-radio-button_input:disabled + .fi-radio-button_label:before {
  border: 1px solid hsl(202,7%,80%);
  background: hsl(202,7%,97%);
}

.c3.fi-radio-button .fi-radio-button_input:disabled + .fi-radio-button_label:after {
  background: hsl(202,7%,97%);
  width: 16px;
  height: 16px;
  top: 6px;
  left: 1px;
}

.c3.fi-radio-button .fi-radio-button_input:disabled:checked + .fi-radio-button_label:after {
  background: hsl(202,7%,67%);
  width: 8px;
  height: 8px;
  top: 10px;
  left: 5px;
}

.c3.fi-radio-button--disabled .fi-radio-button_hintText {
  color: hsl(202,7%,67%);
}

.c3.fi-radio-button--large .fi-radio-button_hintText {
  padding-left: 40px;
}

.c3.fi-radio-button--large .fi-radio-button_input {
  margin: 10px 0 0 9px;
}

.c3.fi-radio-button--large .fi-radio-button_input + .fi-radio-button_label {
  padding-left: 40px;
  padding-top: 2px;
  min-height: 34px;
}

.c3.fi-radio-button--large .fi-radio-button_input + .fi-radio-button_label::before {
  left: 0px;
  top: 2px;
  width: 28px;
  height: 28px;
}

.c3.fi-radio-button--large .fi-radio-button_input + .fi-radio-button_label::after {
  left: 7px;
  top: 9px;
  width: 16px;
  height: 16px;
}

.c3.fi-radio-button--large .fi-radio-button_input:disabled + .fi-radio-button_label:after {
  width: 28px;
  height: 28px;
  top: 3px;
  left: 1px;
}

.c3.fi-radio-button--large .fi-radio-button_input:disabled:checked + .fi-radio-button_label:after {
  background: hsl(202,7%,67%);
  width: 16px;
  height: 16px;
  top: 9px;
  left: 7px;
}

<div>
  <div
    aria-labelledby="test-id-label"
    class="c0 c1 fi-radio-button-group"
    id="test-id"
    role="group"
  >
    <span
      class="c2 fi-radio-button-group_label"
      id="test-id-label"
    >
      Label
    </span>
    <div
      class="c0 fi-radio-button-group_container"
    >
      <div
        class="c0 fi-radio-button fi-radio-button_container c3"
      >
        <input
          class="c4 fi-radio-button_input"
          id="test-id-1"
          name="name"
          type="radio"
          value="1"
        />
        <label
          class="c5 fi-radio-button_label"
          for="test-id-1"
        >
          Label text 1
        </label>
      </div>
      <div
        class="c0 fi-radio-button fi-radio-button_container c3"
      >
        <input
          class="c4 fi-radio-button_input"
          id="test-id-2"
          name="name"
          type="radio"
          value="2"
        />
        <label
          class="c5 fi-radio-button_label"
          for="test-id-2"
        >
          Label text 2
        </label>
      </div>
      <div
        class="c0 fi-radio-button fi-radio-button_container c3"
      >
        <input
          class="c4 fi-radio-button_input"
          id="test-id-3"
          name="name"
          type="radio"
          value="3"
        />
        <label
          class="c5 fi-radio-button_label"
          for="test-id-3"
        >
          Label text 3
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`props className should match snapshot 1`] = `
.c0 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: block;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c0::before,
.c0::after {
  box-sizing: border-box;
}

.c4 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  overflow: visible;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline-block;
  max-width: 100%;
}

.c4::-webkit-input-placeholder {
  color: inherit;
  opacity: 0.54;
}

.c4::before,
.c4::after {
  box-sizing: border-box;
}

.c5 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  max-width: 100%;
}

.c5::before,
.c5::after {
  box-sizing: border-box;
}

.c2 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c2::before,
.c2::after {
  box-sizing: border-box;
}

.c1 {
  color: hsl(0,0%,16%);
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 18px;
  line-height: 1.5;
  font-weight: 400;
}

.c1.fi-radio-button-group .fi-radio-button-group_label {
  display: block;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 600;
}

.c1.fi-radio-button-group .fi-radio-button-group_hintText {
  color: hsl(202,7%,40%);
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
}

.c1 .fi-radio-button_container {
  margin-top: 10px;
}

.c1 .fi-radio-button_container.fi-radio-button--large {
  margin-top: 15px;
}

.c3 {
  color: hsl(0,0%,16%);
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 18px;
  line-height: 1.5;
  font-weight: 400;
}

.c3.fi-radio-button .fi-radio-button_hintText {
  display: block;
  padding-left: 26px;
  color: hsl(202,7%,40%);
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
}

.c3.fi-radio-button .fi-radio-button_input {
  opacity: 0;
  position: absolute;
  margin: 8px 0 0 3px;
}

.c3.fi-radio-button .fi-radio-button_input + .fi-radio-button_label {
  position: relative;
  display: inline-block;
  cursor: pointer;
  min-height: 27px;
  line-height: 1.5em;
  padding-left: 26px;
}

.c3.fi-radio-button .fi-radio-button_input + .fi-radio-button_label::before {
  content: '';
  position: absolute;
  display: inline-block;
  left: 0;
  top: 5px;
  width: 16px;
  height: 16px;
  border-radius: 50%;
  border: 1px solid hsl(201,7%,58%);
  background: transparent;
  box-sizing: content-box;
}

.c3.fi-radio-button .fi-radio-button_input + .fi-radio-button_label::after {
  content: '';
  position: absolute;
  display: inline-block;
  left: 5px;
  top: 10px;
  border-radius: 50%;
  width: 8px;
  height: 8px;
}

.c3.fi-radio-button .fi-radio-button_input:checked + .fi-radio-button_label:before {
  border: 1px solid hsl(212,63%,45%);
}

.c3.fi-radio-button .fi-radio-button_input:checked + .fi-radio-button_label:after {
  background: hsl(212,63%,45%);
}

.c3.fi-radio-button .fi-radio-button_input:focus + .fi-radio-button_label::before {
  outline: 0;
  border-radius: 2px;
  box-shadow: 0 0 0 2px hsl(196,77%,44%);
  border-radius: 50%;
}

.c3.fi-radio-button .fi-radio-button_input:disabled + .fi-radio-button_label {
  cursor: not-allowed;
  color: hsl(202,7%,67%);
}

.c3.fi-radio-button .fi-radio-button_input:disabled + .fi-radio-button_label:before {
  border: 1px solid hsl(202,7%,80%);
  background: hsl(202,7%,97%);
}

.c3.fi-radio-button .fi-radio-button_input:disabled + .fi-radio-button_label:after {
  background: hsl(202,7%,97%);
  width: 16px;
  height: 16px;
  top: 6px;
  left: 1px;
}

.c3.fi-radio-button .fi-radio-button_input:disabled:checked + .fi-radio-button_label:after {
  background: hsl(202,7%,67%);
  width: 8px;
  height: 8px;
  top: 10px;
  left: 5px;
}

.c3.fi-radio-button--disabled .fi-radio-button_hintText {
  color: hsl(202,7%,67%);
}

.c3.fi-radio-button--large .fi-radio-button_hintText {
  padding-left: 40px;
}

.c3.fi-radio-button--large .fi-radio-button_input {
  margin: 10px 0 0 9px;
}

.c3.fi-radio-button--large .fi-radio-button_input + .fi-radio-button_label {
  padding-left: 40px;
  padding-top: 2px;
  min-height: 34px;
}

.c3.fi-radio-button--large .fi-radio-button_input + .fi-radio-button_label::before {
  left: 0px;
  top: 2px;
  width: 28px;
  height: 28px;
}

.c3.fi-radio-button--large .fi-radio-button_input + .fi-radio-button_label::after {
  left: 7px;
  top: 9px;
  width: 16px;
  height: 16px;
}

.c3.fi-radio-button--large .fi-radio-button_input:disabled + .fi-radio-button_label:after {
  width: 28px;
  height: 28px;
  top: 3px;
  left: 1px;
}

.c3.fi-radio-button--large .fi-radio-button_input:disabled:checked + .fi-radio-button_label:after {
  background: hsl(202,7%,67%);
  width: 16px;
  height: 16px;
  top: 9px;
  left: 7px;
}

<div>
  <div
    aria-labelledby="test-id-label"
    class="c0 c1 fi-radio-button-group custom-className"
    id="test-id"
    role="group"
  >
    <span
      class="c2 fi-radio-button-group_label"
      id="test-id-label"
    >
      Label
    </span>
    <div
      class="c0 fi-radio-button-group_container"
    >
      <div
        class="c0 fi-radio-button fi-radio-button_container c3"
      >
        <input
          class="c4 fi-radio-button_input"
          id="test-id-1"
          name="name"
          type="radio"
          value="1"
        />
        <label
          class="c5 fi-radio-button_label"
          for="test-id-1"
        >
          Label text 1
        </label>
      </div>
      <div
        class="c0 fi-radio-button fi-radio-button_container c3"
      >
        <input
          class="c4 fi-radio-button_input"
          id="test-id-2"
          name="name"
          type="radio"
          value="2"
        />
        <label
          class="c5 fi-radio-button_label"
          for="test-id-2"
        >
          Label text 2
        </label>
      </div>
      <div
        class="c0 fi-radio-button fi-radio-button_container c3"
      >
        <input
          class="c4 fi-radio-button_input"
          id="test-id-3"
          name="name"
          type="radio"
          value="3"
        />
        <label
          class="c5 fi-radio-button_label"
          for="test-id-3"
        >
          Label text 3
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`props defaultValue should match snapshot 1`] = `
.c0 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: block;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c0::before,
.c0::after {
  box-sizing: border-box;
}

.c4 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  overflow: visible;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline-block;
  max-width: 100%;
}

.c4::-webkit-input-placeholder {
  color: inherit;
  opacity: 0.54;
}

.c4::before,
.c4::after {
  box-sizing: border-box;
}

.c5 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  max-width: 100%;
}

.c5::before,
.c5::after {
  box-sizing: border-box;
}

.c2 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c2::before,
.c2::after {
  box-sizing: border-box;
}

.c1 {
  color: hsl(0,0%,16%);
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 18px;
  line-height: 1.5;
  font-weight: 400;
}

.c1.fi-radio-button-group .fi-radio-button-group_label {
  display: block;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 600;
}

.c1.fi-radio-button-group .fi-radio-button-group_hintText {
  color: hsl(202,7%,40%);
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
}

.c1 .fi-radio-button_container {
  margin-top: 10px;
}

.c1 .fi-radio-button_container.fi-radio-button--large {
  margin-top: 15px;
}

.c3 {
  color: hsl(0,0%,16%);
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 18px;
  line-height: 1.5;
  font-weight: 400;
}

.c3.fi-radio-button .fi-radio-button_hintText {
  display: block;
  padding-left: 26px;
  color: hsl(202,7%,40%);
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
}

.c3.fi-radio-button .fi-radio-button_input {
  opacity: 0;
  position: absolute;
  margin: 8px 0 0 3px;
}

.c3.fi-radio-button .fi-radio-button_input + .fi-radio-button_label {
  position: relative;
  display: inline-block;
  cursor: pointer;
  min-height: 27px;
  line-height: 1.5em;
  padding-left: 26px;
}

.c3.fi-radio-button .fi-radio-button_input + .fi-radio-button_label::before {
  content: '';
  position: absolute;
  display: inline-block;
  left: 0;
  top: 5px;
  width: 16px;
  height: 16px;
  border-radius: 50%;
  border: 1px solid hsl(201,7%,58%);
  background: transparent;
  box-sizing: content-box;
}

.c3.fi-radio-button .fi-radio-button_input + .fi-radio-button_label::after {
  content: '';
  position: absolute;
  display: inline-block;
  left: 5px;
  top: 10px;
  border-radius: 50%;
  width: 8px;
  height: 8px;
}

.c3.fi-radio-button .fi-radio-button_input:checked + .fi-radio-button_label:before {
  border: 1px solid hsl(212,63%,45%);
}

.c3.fi-radio-button .fi-radio-button_input:checked + .fi-radio-button_label:after {
  background: hsl(212,63%,45%);
}

.c3.fi-radio-button .fi-radio-button_input:focus + .fi-radio-button_label::before {
  outline: 0;
  border-radius: 2px;
  box-shadow: 0 0 0 2px hsl(196,77%,44%);
  border-radius: 50%;
}

.c3.fi-radio-button .fi-radio-button_input:disabled + .fi-radio-button_label {
  cursor: not-allowed;
  color: hsl(202,7%,67%);
}

.c3.fi-radio-button .fi-radio-button_input:disabled + .fi-radio-button_label:before {
  border: 1px solid hsl(202,7%,80%);
  background: hsl(202,7%,97%);
}

.c3.fi-radio-button .fi-radio-button_input:disabled + .fi-radio-button_label:after {
  background: hsl(202,7%,97%);
  width: 16px;
  height: 16px;
  top: 6px;
  left: 1px;
}

.c3.fi-radio-button .fi-radio-button_input:disabled:checked + .fi-radio-button_label:after {
  background: hsl(202,7%,67%);
  width: 8px;
  height: 8px;
  top: 10px;
  left: 5px;
}

.c3.fi-radio-button--disabled .fi-radio-button_hintText {
  color: hsl(202,7%,67%);
}

.c3.fi-radio-button--large .fi-radio-button_hintText {
  padding-left: 40px;
}

.c3.fi-radio-button--large .fi-radio-button_input {
  margin: 10px 0 0 9px;
}

.c3.fi-radio-button--large .fi-radio-button_input + .fi-radio-button_label {
  padding-left: 40px;
  padding-top: 2px;
  min-height: 34px;
}

.c3.fi-radio-button--large .fi-radio-button_input + .fi-radio-button_label::before {
  left: 0px;
  top: 2px;
  width: 28px;
  height: 28px;
}

.c3.fi-radio-button--large .fi-radio-button_input + .fi-radio-button_label::after {
  left: 7px;
  top: 9px;
  width: 16px;
  height: 16px;
}

.c3.fi-radio-button--large .fi-radio-button_input:disabled + .fi-radio-button_label:after {
  width: 28px;
  height: 28px;
  top: 3px;
  left: 1px;
}

.c3.fi-radio-button--large .fi-radio-button_input:disabled:checked + .fi-radio-button_label:after {
  background: hsl(202,7%,67%);
  width: 16px;
  height: 16px;
  top: 9px;
  left: 7px;
}

<div>
  <div
    aria-labelledby="test-id-label"
    class="c0 c1 fi-radio-button-group"
    id="test-id"
    role="group"
  >
    <span
      class="c2 fi-radio-button-group_label"
      id="test-id-label"
    >
      Label
    </span>
    <div
      class="c0 fi-radio-button-group_container"
    >
      <div
        class="c0 fi-radio-button fi-radio-button_container c3"
      >
        <input
          class="c4 fi-radio-button_input"
          id="test-id-1"
          name="name"
          type="radio"
          value="1"
        />
        <label
          class="c5 fi-radio-button_label"
          for="test-id-1"
        >
          Label text 1
        </label>
      </div>
      <div
        class="c0 fi-radio-button fi-radio-button_container c3"
      >
        <input
          class="c4 fi-radio-button_input"
          id="test-id-2"
          name="name"
          type="radio"
          value="2"
        />
        <label
          class="c5 fi-radio-button_label"
          for="test-id-2"
        >
          Label text 2
        </label>
      </div>
      <div
        class="c0 fi-radio-button fi-radio-button_container c3 fi-radio-button--checked"
      >
        <input
          checked=""
          class="c4 fi-radio-button_input"
          id="test-id-3"
          name="name"
          type="radio"
          value="3"
        />
        <label
          class="c5 fi-radio-button_label"
          for="test-id-3"
        >
          Label text 3
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`props hintText should match snapshot 1`] = `
.c0 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: block;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c0::before,
.c0::after {
  box-sizing: border-box;
}

.c4 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  overflow: visible;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline-block;
  max-width: 100%;
}

.c4::-webkit-input-placeholder {
  color: inherit;
  opacity: 0.54;
}

.c4::before,
.c4::after {
  box-sizing: border-box;
}

.c5 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  max-width: 100%;
}

.c5::before,
.c5::after {
  box-sizing: border-box;
}

.c2 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c2::before,
.c2::after {
  box-sizing: border-box;
}

.c1 {
  color: hsl(0,0%,16%);
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 18px;
  line-height: 1.5;
  font-weight: 400;
}

.c1.fi-radio-button-group .fi-radio-button-group_label {
  display: block;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 600;
}

.c1.fi-radio-button-group .fi-radio-button-group_hintText {
  color: hsl(202,7%,40%);
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
}

.c1 .fi-radio-button_container {
  margin-top: 10px;
}

.c1 .fi-radio-button_container.fi-radio-button--large {
  margin-top: 15px;
}

.c3 {
  color: hsl(0,0%,16%);
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 18px;
  line-height: 1.5;
  font-weight: 400;
}

.c3.fi-radio-button .fi-radio-button_hintText {
  display: block;
  padding-left: 26px;
  color: hsl(202,7%,40%);
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
}

.c3.fi-radio-button .fi-radio-button_input {
  opacity: 0;
  position: absolute;
  margin: 8px 0 0 3px;
}

.c3.fi-radio-button .fi-radio-button_input + .fi-radio-button_label {
  position: relative;
  display: inline-block;
  cursor: pointer;
  min-height: 27px;
  line-height: 1.5em;
  padding-left: 26px;
}

.c3.fi-radio-button .fi-radio-button_input + .fi-radio-button_label::before {
  content: '';
  position: absolute;
  display: inline-block;
  left: 0;
  top: 5px;
  width: 16px;
  height: 16px;
  border-radius: 50%;
  border: 1px solid hsl(201,7%,58%);
  background: transparent;
  box-sizing: content-box;
}

.c3.fi-radio-button .fi-radio-button_input + .fi-radio-button_label::after {
  content: '';
  position: absolute;
  display: inline-block;
  left: 5px;
  top: 10px;
  border-radius: 50%;
  width: 8px;
  height: 8px;
}

.c3.fi-radio-button .fi-radio-button_input:checked + .fi-radio-button_label:before {
  border: 1px solid hsl(212,63%,45%);
}

.c3.fi-radio-button .fi-radio-button_input:checked + .fi-radio-button_label:after {
  background: hsl(212,63%,45%);
}

.c3.fi-radio-button .fi-radio-button_input:focus + .fi-radio-button_label::before {
  outline: 0;
  border-radius: 2px;
  box-shadow: 0 0 0 2px hsl(196,77%,44%);
  border-radius: 50%;
}

.c3.fi-radio-button .fi-radio-button_input:disabled + .fi-radio-button_label {
  cursor: not-allowed;
  color: hsl(202,7%,67%);
}

.c3.fi-radio-button .fi-radio-button_input:disabled + .fi-radio-button_label:before {
  border: 1px solid hsl(202,7%,80%);
  background: hsl(202,7%,97%);
}

.c3.fi-radio-button .fi-radio-button_input:disabled + .fi-radio-button_label:after {
  background: hsl(202,7%,97%);
  width: 16px;
  height: 16px;
  top: 6px;
  left: 1px;
}

.c3.fi-radio-button .fi-radio-button_input:disabled:checked + .fi-radio-button_label:after {
  background: hsl(202,7%,67%);
  width: 8px;
  height: 8px;
  top: 10px;
  left: 5px;
}

.c3.fi-radio-button--disabled .fi-radio-button_hintText {
  color: hsl(202,7%,67%);
}

.c3.fi-radio-button--large .fi-radio-button_hintText {
  padding-left: 40px;
}

.c3.fi-radio-button--large .fi-radio-button_input {
  margin: 10px 0 0 9px;
}

.c3.fi-radio-button--large .fi-radio-button_input + .fi-radio-button_label {
  padding-left: 40px;
  padding-top: 2px;
  min-height: 34px;
}

.c3.fi-radio-button--large .fi-radio-button_input + .fi-radio-button_label::before {
  left: 0px;
  top: 2px;
  width: 28px;
  height: 28px;
}

.c3.fi-radio-button--large .fi-radio-button_input + .fi-radio-button_label::after {
  left: 7px;
  top: 9px;
  width: 16px;
  height: 16px;
}

.c3.fi-radio-button--large .fi-radio-button_input:disabled + .fi-radio-button_label:after {
  width: 28px;
  height: 28px;
  top: 3px;
  left: 1px;
}

.c3.fi-radio-button--large .fi-radio-button_input:disabled:checked + .fi-radio-button_label:after {
  background: hsl(202,7%,67%);
  width: 16px;
  height: 16px;
  top: 9px;
  left: 7px;
}

<div>
  <div
    aria-labelledby="test-id-label test-id-hintText"
    class="c0 c1 fi-radio-button-group"
    id="test-id"
    role="group"
  >
    <span
      class="c2 fi-radio-button-group_label"
      id="test-id-label"
    >
      Label
    </span>
    <span
      class="c2 fi-radio-button-group_hintText"
      id="test-id-hintText"
    >
      Example hint text
    </span>
    <div
      class="c0 fi-radio-button-group_container"
    >
      <div
        class="c0 fi-radio-button fi-radio-button_container c3"
      >
        <input
          class="c4 fi-radio-button_input"
          id="test-id-1"
          name="name"
          type="radio"
          value="1"
        />
        <label
          class="c5 fi-radio-button_label"
          for="test-id-1"
        >
          Label text 1
        </label>
      </div>
      <div
        class="c0 fi-radio-button fi-radio-button_container c3"
      >
        <input
          class="c4 fi-radio-button_input"
          id="test-id-2"
          name="name"
          type="radio"
          value="2"
        />
        <label
          class="c5 fi-radio-button_label"
          for="test-id-2"
        >
          Label text 2
        </label>
      </div>
      <div
        class="c0 fi-radio-button fi-radio-button_container c3"
      >
        <input
          class="c4 fi-radio-button_input"
          id="test-id-3"
          name="name"
          type="radio"
          value="3"
        />
        <label
          class="c5 fi-radio-button_label"
          for="test-id-3"
        >
          Label text 3
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`props id should match snapshot 1`] = `
.c0 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: block;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c0::before,
.c0::after {
  box-sizing: border-box;
}

.c4 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  overflow: visible;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline-block;
  max-width: 100%;
}

.c4::-webkit-input-placeholder {
  color: inherit;
  opacity: 0.54;
}

.c4::before,
.c4::after {
  box-sizing: border-box;
}

.c5 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  max-width: 100%;
}

.c5::before,
.c5::after {
  box-sizing: border-box;
}

.c2 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c2::before,
.c2::after {
  box-sizing: border-box;
}

.c1 {
  color: hsl(0,0%,16%);
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 18px;
  line-height: 1.5;
  font-weight: 400;
}

.c1.fi-radio-button-group .fi-radio-button-group_label {
  display: block;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 600;
}

.c1.fi-radio-button-group .fi-radio-button-group_hintText {
  color: hsl(202,7%,40%);
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
}

.c1 .fi-radio-button_container {
  margin-top: 10px;
}

.c1 .fi-radio-button_container.fi-radio-button--large {
  margin-top: 15px;
}

.c3 {
  color: hsl(0,0%,16%);
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 18px;
  line-height: 1.5;
  font-weight: 400;
}

.c3.fi-radio-button .fi-radio-button_hintText {
  display: block;
  padding-left: 26px;
  color: hsl(202,7%,40%);
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
}

.c3.fi-radio-button .fi-radio-button_input {
  opacity: 0;
  position: absolute;
  margin: 8px 0 0 3px;
}

.c3.fi-radio-button .fi-radio-button_input + .fi-radio-button_label {
  position: relative;
  display: inline-block;
  cursor: pointer;
  min-height: 27px;
  line-height: 1.5em;
  padding-left: 26px;
}

.c3.fi-radio-button .fi-radio-button_input + .fi-radio-button_label::before {
  content: '';
  position: absolute;
  display: inline-block;
  left: 0;
  top: 5px;
  width: 16px;
  height: 16px;
  border-radius: 50%;
  border: 1px solid hsl(201,7%,58%);
  background: transparent;
  box-sizing: content-box;
}

.c3.fi-radio-button .fi-radio-button_input + .fi-radio-button_label::after {
  content: '';
  position: absolute;
  display: inline-block;
  left: 5px;
  top: 10px;
  border-radius: 50%;
  width: 8px;
  height: 8px;
}

.c3.fi-radio-button .fi-radio-button_input:checked + .fi-radio-button_label:before {
  border: 1px solid hsl(212,63%,45%);
}

.c3.fi-radio-button .fi-radio-button_input:checked + .fi-radio-button_label:after {
  background: hsl(212,63%,45%);
}

.c3.fi-radio-button .fi-radio-button_input:focus + .fi-radio-button_label::before {
  outline: 0;
  border-radius: 2px;
  box-shadow: 0 0 0 2px hsl(196,77%,44%);
  border-radius: 50%;
}

.c3.fi-radio-button .fi-radio-button_input:disabled + .fi-radio-button_label {
  cursor: not-allowed;
  color: hsl(202,7%,67%);
}

.c3.fi-radio-button .fi-radio-button_input:disabled + .fi-radio-button_label:before {
  border: 1px solid hsl(202,7%,80%);
  background: hsl(202,7%,97%);
}

.c3.fi-radio-button .fi-radio-button_input:disabled + .fi-radio-button_label:after {
  background: hsl(202,7%,97%);
  width: 16px;
  height: 16px;
  top: 6px;
  left: 1px;
}

.c3.fi-radio-button .fi-radio-button_input:disabled:checked + .fi-radio-button_label:after {
  background: hsl(202,7%,67%);
  width: 8px;
  height: 8px;
  top: 10px;
  left: 5px;
}

.c3.fi-radio-button--disabled .fi-radio-button_hintText {
  color: hsl(202,7%,67%);
}

.c3.fi-radio-button--large .fi-radio-button_hintText {
  padding-left: 40px;
}

.c3.fi-radio-button--large .fi-radio-button_input {
  margin: 10px 0 0 9px;
}

.c3.fi-radio-button--large .fi-radio-button_input + .fi-radio-button_label {
  padding-left: 40px;
  padding-top: 2px;
  min-height: 34px;
}

.c3.fi-radio-button--large .fi-radio-button_input + .fi-radio-button_label::before {
  left: 0px;
  top: 2px;
  width: 28px;
  height: 28px;
}

.c3.fi-radio-button--large .fi-radio-button_input + .fi-radio-button_label::after {
  left: 7px;
  top: 9px;
  width: 16px;
  height: 16px;
}

.c3.fi-radio-button--large .fi-radio-button_input:disabled + .fi-radio-button_label:after {
  width: 28px;
  height: 28px;
  top: 3px;
  left: 1px;
}

.c3.fi-radio-button--large .fi-radio-button_input:disabled:checked + .fi-radio-button_label:after {
  background: hsl(202,7%,67%);
  width: 16px;
  height: 16px;
  top: 9px;
  left: 7px;
}

<div>
  <div
    aria-labelledby="good-id-label"
    class="c0 c1 fi-radio-button-group"
    id="good-id"
    role="group"
  >
    <span
      class="c2 fi-radio-button-group_label"
      id="good-id-label"
    >
      Label
    </span>
    <div
      class="c0 fi-radio-button-group_container"
    >
      <div
        class="c0 fi-radio-button fi-radio-button_container c3"
      >
        <input
          class="c4 fi-radio-button_input"
          id="test-id-1"
          name="name"
          type="radio"
          value="1"
        />
        <label
          class="c5 fi-radio-button_label"
          for="test-id-1"
        >
          Label text 1
        </label>
      </div>
      <div
        class="c0 fi-radio-button fi-radio-button_container c3"
      >
        <input
          class="c4 fi-radio-button_input"
          id="test-id-2"
          name="name"
          type="radio"
          value="2"
        />
        <label
          class="c5 fi-radio-button_label"
          for="test-id-2"
        >
          Label text 2
        </label>
      </div>
      <div
        class="c0 fi-radio-button fi-radio-button_container c3"
      >
        <input
          class="c4 fi-radio-button_input"
          id="test-id-3"
          name="name"
          type="radio"
          value="3"
        />
        <label
          class="c5 fi-radio-button_label"
          for="test-id-3"
        >
          Label text 3
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`props label should match snapshot 1`] = `
.c0 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: block;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c0::before,
.c0::after {
  box-sizing: border-box;
}

.c4 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  overflow: visible;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline-block;
  max-width: 100%;
}

.c4::-webkit-input-placeholder {
  color: inherit;
  opacity: 0.54;
}

.c4::before,
.c4::after {
  box-sizing: border-box;
}

.c5 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  max-width: 100%;
}

.c5::before,
.c5::after {
  box-sizing: border-box;
}

.c2 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c2::before,
.c2::after {
  box-sizing: border-box;
}

.c1 {
  color: hsl(0,0%,16%);
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 18px;
  line-height: 1.5;
  font-weight: 400;
}

.c1.fi-radio-button-group .fi-radio-button-group_label {
  display: block;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 600;
}

.c1.fi-radio-button-group .fi-radio-button-group_hintText {
  color: hsl(202,7%,40%);
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
}

.c1 .fi-radio-button_container {
  margin-top: 10px;
}

.c1 .fi-radio-button_container.fi-radio-button--large {
  margin-top: 15px;
}

.c3 {
  color: hsl(0,0%,16%);
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 18px;
  line-height: 1.5;
  font-weight: 400;
}

.c3.fi-radio-button .fi-radio-button_hintText {
  display: block;
  padding-left: 26px;
  color: hsl(202,7%,40%);
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
}

.c3.fi-radio-button .fi-radio-button_input {
  opacity: 0;
  position: absolute;
  margin: 8px 0 0 3px;
}

.c3.fi-radio-button .fi-radio-button_input + .fi-radio-button_label {
  position: relative;
  display: inline-block;
  cursor: pointer;
  min-height: 27px;
  line-height: 1.5em;
  padding-left: 26px;
}

.c3.fi-radio-button .fi-radio-button_input + .fi-radio-button_label::before {
  content: '';
  position: absolute;
  display: inline-block;
  left: 0;
  top: 5px;
  width: 16px;
  height: 16px;
  border-radius: 50%;
  border: 1px solid hsl(201,7%,58%);
  background: transparent;
  box-sizing: content-box;
}

.c3.fi-radio-button .fi-radio-button_input + .fi-radio-button_label::after {
  content: '';
  position: absolute;
  display: inline-block;
  left: 5px;
  top: 10px;
  border-radius: 50%;
  width: 8px;
  height: 8px;
}

.c3.fi-radio-button .fi-radio-button_input:checked + .fi-radio-button_label:before {
  border: 1px solid hsl(212,63%,45%);
}

.c3.fi-radio-button .fi-radio-button_input:checked + .fi-radio-button_label:after {
  background: hsl(212,63%,45%);
}

.c3.fi-radio-button .fi-radio-button_input:focus + .fi-radio-button_label::before {
  outline: 0;
  border-radius: 2px;
  box-shadow: 0 0 0 2px hsl(196,77%,44%);
  border-radius: 50%;
}

.c3.fi-radio-button .fi-radio-button_input:disabled + .fi-radio-button_label {
  cursor: not-allowed;
  color: hsl(202,7%,67%);
}

.c3.fi-radio-button .fi-radio-button_input:disabled + .fi-radio-button_label:before {
  border: 1px solid hsl(202,7%,80%);
  background: hsl(202,7%,97%);
}

.c3.fi-radio-button .fi-radio-button_input:disabled + .fi-radio-button_label:after {
  background: hsl(202,7%,97%);
  width: 16px;
  height: 16px;
  top: 6px;
  left: 1px;
}

.c3.fi-radio-button .fi-radio-button_input:disabled:checked + .fi-radio-button_label:after {
  background: hsl(202,7%,67%);
  width: 8px;
  height: 8px;
  top: 10px;
  left: 5px;
}

.c3.fi-radio-button--disabled .fi-radio-button_hintText {
  color: hsl(202,7%,67%);
}

.c3.fi-radio-button--large .fi-radio-button_hintText {
  padding-left: 40px;
}

.c3.fi-radio-button--large .fi-radio-button_input {
  margin: 10px 0 0 9px;
}

.c3.fi-radio-button--large .fi-radio-button_input + .fi-radio-button_label {
  padding-left: 40px;
  padding-top: 2px;
  min-height: 34px;
}

.c3.fi-radio-button--large .fi-radio-button_input + .fi-radio-button_label::before {
  left: 0px;
  top: 2px;
  width: 28px;
  height: 28px;
}

.c3.fi-radio-button--large .fi-radio-button_input + .fi-radio-button_label::after {
  left: 7px;
  top: 9px;
  width: 16px;
  height: 16px;
}

.c3.fi-radio-button--large .fi-radio-button_input:disabled + .fi-radio-button_label:after {
  width: 28px;
  height: 28px;
  top: 3px;
  left: 1px;
}

.c3.fi-radio-button--large .fi-radio-button_input:disabled:checked + .fi-radio-button_label:after {
  background: hsl(202,7%,67%);
  width: 16px;
  height: 16px;
  top: 9px;
  left: 7px;
}

<div>
  <div
    aria-labelledby="test-id-label"
    class="c0 c1 fi-radio-button-group"
    id="test-id"
    role="group"
  >
    <span
      class="c2 fi-radio-button-group_label"
      id="test-id-label"
    >
      Label here
    </span>
    <div
      class="c0 fi-radio-button-group_container"
    >
      <div
        class="c0 fi-radio-button fi-radio-button_container c3"
      >
        <input
          class="c4 fi-radio-button_input"
          id="test-id-1"
          name="name"
          type="radio"
          value="1"
        />
        <label
          class="c5 fi-radio-button_label"
          for="test-id-1"
        >
          Label text 1
        </label>
      </div>
      <div
        class="c0 fi-radio-button fi-radio-button_container c3"
      >
        <input
          class="c4 fi-radio-button_input"
          id="test-id-2"
          name="name"
          type="radio"
          value="2"
        />
        <label
          class="c5 fi-radio-button_label"
          for="test-id-2"
        >
          Label text 2
        </label>
      </div>
      <div
        class="c0 fi-radio-button fi-radio-button_container c3"
      >
        <input
          class="c4 fi-radio-button_input"
          id="test-id-3"
          name="name"
          type="radio"
          value="3"
        />
        <label
          class="c5 fi-radio-button_label"
          for="test-id-3"
        >
          Label text 3
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`props labelMode should match snapshot 1`] = `
.c0 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: block;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c0::before,
.c0::after {
  box-sizing: border-box;
}

.c5 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  overflow: visible;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline-block;
  max-width: 100%;
}

.c5::-webkit-input-placeholder {
  color: inherit;
  opacity: 0.54;
}

.c5::before,
.c5::after {
  box-sizing: border-box;
}

.c6 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  max-width: 100%;
}

.c6::before,
.c6::after {
  box-sizing: border-box;
}

.c2 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c2::before,
.c2::after {
  box-sizing: border-box;
}

.c3 {
  position: absolute;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  width: 1px;
  margin: -1px;
  padding: 0;
  border: 0;
  overflow: hidden;
}

.c1 {
  color: hsl(0,0%,16%);
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 18px;
  line-height: 1.5;
  font-weight: 400;
}

.c1.fi-radio-button-group .fi-radio-button-group_label {
  display: block;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 600;
}

.c1.fi-radio-button-group .fi-radio-button-group_hintText {
  color: hsl(202,7%,40%);
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
}

.c1 .fi-radio-button_container {
  margin-top: 10px;
}

.c1 .fi-radio-button_container.fi-radio-button--large {
  margin-top: 15px;
}

.c4 {
  color: hsl(0,0%,16%);
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 18px;
  line-height: 1.5;
  font-weight: 400;
}

.c4.fi-radio-button .fi-radio-button_hintText {
  display: block;
  padding-left: 26px;
  color: hsl(202,7%,40%);
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
}

.c4.fi-radio-button .fi-radio-button_input {
  opacity: 0;
  position: absolute;
  margin: 8px 0 0 3px;
}

.c4.fi-radio-button .fi-radio-button_input + .fi-radio-button_label {
  position: relative;
  display: inline-block;
  cursor: pointer;
  min-height: 27px;
  line-height: 1.5em;
  padding-left: 26px;
}

.c4.fi-radio-button .fi-radio-button_input + .fi-radio-button_label::before {
  content: '';
  position: absolute;
  display: inline-block;
  left: 0;
  top: 5px;
  width: 16px;
  height: 16px;
  border-radius: 50%;
  border: 1px solid hsl(201,7%,58%);
  background: transparent;
  box-sizing: content-box;
}

.c4.fi-radio-button .fi-radio-button_input + .fi-radio-button_label::after {
  content: '';
  position: absolute;
  display: inline-block;
  left: 5px;
  top: 10px;
  border-radius: 50%;
  width: 8px;
  height: 8px;
}

.c4.fi-radio-button .fi-radio-button_input:checked + .fi-radio-button_label:before {
  border: 1px solid hsl(212,63%,45%);
}

.c4.fi-radio-button .fi-radio-button_input:checked + .fi-radio-button_label:after {
  background: hsl(212,63%,45%);
}

.c4.fi-radio-button .fi-radio-button_input:focus + .fi-radio-button_label::before {
  outline: 0;
  border-radius: 2px;
  box-shadow: 0 0 0 2px hsl(196,77%,44%);
  border-radius: 50%;
}

.c4.fi-radio-button .fi-radio-button_input:disabled + .fi-radio-button_label {
  cursor: not-allowed;
  color: hsl(202,7%,67%);
}

.c4.fi-radio-button .fi-radio-button_input:disabled + .fi-radio-button_label:before {
  border: 1px solid hsl(202,7%,80%);
  background: hsl(202,7%,97%);
}

.c4.fi-radio-button .fi-radio-button_input:disabled + .fi-radio-button_label:after {
  background: hsl(202,7%,97%);
  width: 16px;
  height: 16px;
  top: 6px;
  left: 1px;
}

.c4.fi-radio-button .fi-radio-button_input:disabled:checked + .fi-radio-button_label:after {
  background: hsl(202,7%,67%);
  width: 8px;
  height: 8px;
  top: 10px;
  left: 5px;
}

.c4.fi-radio-button--disabled .fi-radio-button_hintText {
  color: hsl(202,7%,67%);
}

.c4.fi-radio-button--large .fi-radio-button_hintText {
  padding-left: 40px;
}

.c4.fi-radio-button--large .fi-radio-button_input {
  margin: 10px 0 0 9px;
}

.c4.fi-radio-button--large .fi-radio-button_input + .fi-radio-button_label {
  padding-left: 40px;
  padding-top: 2px;
  min-height: 34px;
}

.c4.fi-radio-button--large .fi-radio-button_input + .fi-radio-button_label::before {
  left: 0px;
  top: 2px;
  width: 28px;
  height: 28px;
}

.c4.fi-radio-button--large .fi-radio-button_input + .fi-radio-button_label::after {
  left: 7px;
  top: 9px;
  width: 16px;
  height: 16px;
}

.c4.fi-radio-button--large .fi-radio-button_input:disabled + .fi-radio-button_label:after {
  width: 28px;
  height: 28px;
  top: 3px;
  left: 1px;
}

.c4.fi-radio-button--large .fi-radio-button_input:disabled:checked + .fi-radio-button_label:after {
  background: hsl(202,7%,67%);
  width: 16px;
  height: 16px;
  top: 9px;
  left: 7px;
}

<div>
  <div
    aria-labelledby="test-id-label"
    class="c0 c1 fi-radio-button-group"
    id="test-id"
    role="group"
  >
    <span
      class="c2 c3 fi-visually-hidden"
      id="test-id-label"
    >
      Label here
    </span>
    <div
      class="c0 fi-radio-button-group_container"
    >
      <div
        class="c0 fi-radio-button fi-radio-button_container c4"
      >
        <input
          class="c5 fi-radio-button_input"
          id="test-id-1"
          name="name"
          type="radio"
          value="1"
        />
        <label
          class="c6 fi-radio-button_label"
          for="test-id-1"
        >
          Label text 1
        </label>
      </div>
      <div
        class="c0 fi-radio-button fi-radio-button_container c4"
      >
        <input
          class="c5 fi-radio-button_input"
          id="test-id-2"
          name="name"
          type="radio"
          value="2"
        />
        <label
          class="c6 fi-radio-button_label"
          for="test-id-2"
        >
          Label text 2
        </label>
      </div>
      <div
        class="c0 fi-radio-button fi-radio-button_container c4"
      >
        <input
          class="c5 fi-radio-button_input"
          id="test-id-3"
          name="name"
          type="radio"
          value="3"
        />
        <label
          class="c6 fi-radio-button_label"
          for="test-id-3"
        >
          Label text 3
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`props name should match snapshot 1`] = `
.c0 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: block;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c0::before,
.c0::after {
  box-sizing: border-box;
}

.c4 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  overflow: visible;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline-block;
  max-width: 100%;
}

.c4::-webkit-input-placeholder {
  color: inherit;
  opacity: 0.54;
}

.c4::before,
.c4::after {
  box-sizing: border-box;
}

.c5 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  max-width: 100%;
}

.c5::before,
.c5::after {
  box-sizing: border-box;
}

.c2 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c2::before,
.c2::after {
  box-sizing: border-box;
}

.c1 {
  color: hsl(0,0%,16%);
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 18px;
  line-height: 1.5;
  font-weight: 400;
}

.c1.fi-radio-button-group .fi-radio-button-group_label {
  display: block;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 600;
}

.c1.fi-radio-button-group .fi-radio-button-group_hintText {
  color: hsl(202,7%,40%);
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
}

.c1 .fi-radio-button_container {
  margin-top: 10px;
}

.c1 .fi-radio-button_container.fi-radio-button--large {
  margin-top: 15px;
}

.c3 {
  color: hsl(0,0%,16%);
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 18px;
  line-height: 1.5;
  font-weight: 400;
}

.c3.fi-radio-button .fi-radio-button_hintText {
  display: block;
  padding-left: 26px;
  color: hsl(202,7%,40%);
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
}

.c3.fi-radio-button .fi-radio-button_input {
  opacity: 0;
  position: absolute;
  margin: 8px 0 0 3px;
}

.c3.fi-radio-button .fi-radio-button_input + .fi-radio-button_label {
  position: relative;
  display: inline-block;
  cursor: pointer;
  min-height: 27px;
  line-height: 1.5em;
  padding-left: 26px;
}

.c3.fi-radio-button .fi-radio-button_input + .fi-radio-button_label::before {
  content: '';
  position: absolute;
  display: inline-block;
  left: 0;
  top: 5px;
  width: 16px;
  height: 16px;
  border-radius: 50%;
  border: 1px solid hsl(201,7%,58%);
  background: transparent;
  box-sizing: content-box;
}

.c3.fi-radio-button .fi-radio-button_input + .fi-radio-button_label::after {
  content: '';
  position: absolute;
  display: inline-block;
  left: 5px;
  top: 10px;
  border-radius: 50%;
  width: 8px;
  height: 8px;
}

.c3.fi-radio-button .fi-radio-button_input:checked + .fi-radio-button_label:before {
  border: 1px solid hsl(212,63%,45%);
}

.c3.fi-radio-button .fi-radio-button_input:checked + .fi-radio-button_label:after {
  background: hsl(212,63%,45%);
}

.c3.fi-radio-button .fi-radio-button_input:focus + .fi-radio-button_label::before {
  outline: 0;
  border-radius: 2px;
  box-shadow: 0 0 0 2px hsl(196,77%,44%);
  border-radius: 50%;
}

.c3.fi-radio-button .fi-radio-button_input:disabled + .fi-radio-button_label {
  cursor: not-allowed;
  color: hsl(202,7%,67%);
}

.c3.fi-radio-button .fi-radio-button_input:disabled + .fi-radio-button_label:before {
  border: 1px solid hsl(202,7%,80%);
  background: hsl(202,7%,97%);
}

.c3.fi-radio-button .fi-radio-button_input:disabled + .fi-radio-button_label:after {
  background: hsl(202,7%,97%);
  width: 16px;
  height: 16px;
  top: 6px;
  left: 1px;
}

.c3.fi-radio-button .fi-radio-button_input:disabled:checked + .fi-radio-button_label:after {
  background: hsl(202,7%,67%);
  width: 8px;
  height: 8px;
  top: 10px;
  left: 5px;
}

.c3.fi-radio-button--disabled .fi-radio-button_hintText {
  color: hsl(202,7%,67%);
}

.c3.fi-radio-button--large .fi-radio-button_hintText {
  padding-left: 40px;
}

.c3.fi-radio-button--large .fi-radio-button_input {
  margin: 10px 0 0 9px;
}

.c3.fi-radio-button--large .fi-radio-button_input + .fi-radio-button_label {
  padding-left: 40px;
  padding-top: 2px;
  min-height: 34px;
}

.c3.fi-radio-button--large .fi-radio-button_input + .fi-radio-button_label::before {
  left: 0px;
  top: 2px;
  width: 28px;
  height: 28px;
}

.c3.fi-radio-button--large .fi-radio-button_input + .fi-radio-button_label::after {
  left: 7px;
  top: 9px;
  width: 16px;
  height: 16px;
}

.c3.fi-radio-button--large .fi-radio-button_input:disabled + .fi-radio-button_label:after {
  width: 28px;
  height: 28px;
  top: 3px;
  left: 1px;
}

.c3.fi-radio-button--large .fi-radio-button_input:disabled:checked + .fi-radio-button_label:after {
  background: hsl(202,7%,67%);
  width: 16px;
  height: 16px;
  top: 9px;
  left: 7px;
}

<div>
  <div
    aria-labelledby="test-id-label"
    class="c0 c1 fi-radio-button-group"
    id="test-id"
    role="group"
  >
    <span
      class="c2 fi-radio-button-group_label"
      id="test-id-label"
    >
      Label
    </span>
    <div
      class="c0 fi-radio-button-group_container"
    >
      <div
        class="c0 fi-radio-button fi-radio-button_container c3"
      >
        <input
          class="c4 fi-radio-button_input"
          id="test-id-1"
          name="nice-name"
          type="radio"
          value="1"
        />
        <label
          class="c5 fi-radio-button_label"
          for="test-id-1"
        >
          Label text 1
        </label>
      </div>
      <div
        class="c0 fi-radio-button fi-radio-button_container c3"
      >
        <input
          class="c4 fi-radio-button_input"
          id="test-id-2"
          name="nice-name"
          type="radio"
          value="2"
        />
        <label
          class="c5 fi-radio-button_label"
          for="test-id-2"
        >
          Label text 2
        </label>
      </div>
      <div
        class="c0 fi-radio-button fi-radio-button_container c3"
      >
        <input
          class="c4 fi-radio-button_input"
          id="test-id-3"
          name="nice-name"
          type="radio"
          value="3"
        />
        <label
          class="c5 fi-radio-button_label"
          for="test-id-3"
        >
          Label text 3
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`props value should match snapshot 1`] = `
.c0 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: block;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c0::before,
.c0::after {
  box-sizing: border-box;
}

.c4 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  overflow: visible;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline-block;
  max-width: 100%;
}

.c4::-webkit-input-placeholder {
  color: inherit;
  opacity: 0.54;
}

.c4::before,
.c4::after {
  box-sizing: border-box;
}

.c5 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  max-width: 100%;
}

.c5::before,
.c5::after {
  box-sizing: border-box;
}

.c2 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c2::before,
.c2::after {
  box-sizing: border-box;
}

.c1 {
  color: hsl(0,0%,16%);
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 18px;
  line-height: 1.5;
  font-weight: 400;
}

.c1.fi-radio-button-group .fi-radio-button-group_label {
  display: block;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 600;
}

.c1.fi-radio-button-group .fi-radio-button-group_hintText {
  color: hsl(202,7%,40%);
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
}

.c1 .fi-radio-button_container {
  margin-top: 10px;
}

.c1 .fi-radio-button_container.fi-radio-button--large {
  margin-top: 15px;
}

.c3 {
  color: hsl(0,0%,16%);
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 18px;
  line-height: 1.5;
  font-weight: 400;
}

.c3.fi-radio-button .fi-radio-button_hintText {
  display: block;
  padding-left: 26px;
  color: hsl(202,7%,40%);
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
}

.c3.fi-radio-button .fi-radio-button_input {
  opacity: 0;
  position: absolute;
  margin: 8px 0 0 3px;
}

.c3.fi-radio-button .fi-radio-button_input + .fi-radio-button_label {
  position: relative;
  display: inline-block;
  cursor: pointer;
  min-height: 27px;
  line-height: 1.5em;
  padding-left: 26px;
}

.c3.fi-radio-button .fi-radio-button_input + .fi-radio-button_label::before {
  content: '';
  position: absolute;
  display: inline-block;
  left: 0;
  top: 5px;
  width: 16px;
  height: 16px;
  border-radius: 50%;
  border: 1px solid hsl(201,7%,58%);
  background: transparent;
  box-sizing: content-box;
}

.c3.fi-radio-button .fi-radio-button_input + .fi-radio-button_label::after {
  content: '';
  position: absolute;
  display: inline-block;
  left: 5px;
  top: 10px;
  border-radius: 50%;
  width: 8px;
  height: 8px;
}

.c3.fi-radio-button .fi-radio-button_input:checked + .fi-radio-button_label:before {
  border: 1px solid hsl(212,63%,45%);
}

.c3.fi-radio-button .fi-radio-button_input:checked + .fi-radio-button_label:after {
  background: hsl(212,63%,45%);
}

.c3.fi-radio-button .fi-radio-button_input:focus + .fi-radio-button_label::before {
  outline: 0;
  border-radius: 2px;
  box-shadow: 0 0 0 2px hsl(196,77%,44%);
  border-radius: 50%;
}

.c3.fi-radio-button .fi-radio-button_input:disabled + .fi-radio-button_label {
  cursor: not-allowed;
  color: hsl(202,7%,67%);
}

.c3.fi-radio-button .fi-radio-button_input:disabled + .fi-radio-button_label:before {
  border: 1px solid hsl(202,7%,80%);
  background: hsl(202,7%,97%);
}

.c3.fi-radio-button .fi-radio-button_input:disabled + .fi-radio-button_label:after {
  background: hsl(202,7%,97%);
  width: 16px;
  height: 16px;
  top: 6px;
  left: 1px;
}

.c3.fi-radio-button .fi-radio-button_input:disabled:checked + .fi-radio-button_label:after {
  background: hsl(202,7%,67%);
  width: 8px;
  height: 8px;
  top: 10px;
  left: 5px;
}

.c3.fi-radio-button--disabled .fi-radio-button_hintText {
  color: hsl(202,7%,67%);
}

.c3.fi-radio-button--large .fi-radio-button_hintText {
  padding-left: 40px;
}

.c3.fi-radio-button--large .fi-radio-button_input {
  margin: 10px 0 0 9px;
}

.c3.fi-radio-button--large .fi-radio-button_input + .fi-radio-button_label {
  padding-left: 40px;
  padding-top: 2px;
  min-height: 34px;
}

.c3.fi-radio-button--large .fi-radio-button_input + .fi-radio-button_label::before {
  left: 0px;
  top: 2px;
  width: 28px;
  height: 28px;
}

.c3.fi-radio-button--large .fi-radio-button_input + .fi-radio-button_label::after {
  left: 7px;
  top: 9px;
  width: 16px;
  height: 16px;
}

.c3.fi-radio-button--large .fi-radio-button_input:disabled + .fi-radio-button_label:after {
  width: 28px;
  height: 28px;
  top: 3px;
  left: 1px;
}

.c3.fi-radio-button--large .fi-radio-button_input:disabled:checked + .fi-radio-button_label:after {
  background: hsl(202,7%,67%);
  width: 16px;
  height: 16px;
  top: 9px;
  left: 7px;
}

<div>
  <div
    aria-labelledby="test-id-label"
    class="c0 c1 fi-radio-button-group"
    id="test-id"
    role="group"
    value="2"
  >
    <span
      class="c2 fi-radio-button-group_label"
      id="test-id-label"
    >
      Label
    </span>
    <div
      class="c0 fi-radio-button-group_container"
    >
      <div
        class="c0 fi-radio-button fi-radio-button_container c3"
      >
        <input
          class="c4 fi-radio-button_input"
          id="test-id-1"
          name="name"
          type="radio"
          value="1"
        />
        <label
          class="c5 fi-radio-button_label"
          for="test-id-1"
        >
          Label text 1
        </label>
      </div>
      <div
        class="c0 fi-radio-button fi-radio-button_container c3 fi-radio-button--checked"
      >
        <input
          checked=""
          class="c4 fi-radio-button_input"
          id="test-id-2"
          name="name"
          type="radio"
          value="2"
        />
        <label
          class="c5 fi-radio-button_label"
          for="test-id-2"
        >
          Label text 2
        </label>
      </div>
      <div
        class="c0 fi-radio-button fi-radio-button_container c3"
      >
        <input
          class="c4 fi-radio-button_input"
          id="test-id-3"
          name="name"
          type="radio"
          value="3"
        />
        <label
          class="c5 fi-radio-button_label"
          for="test-id-3"
        >
          Label text 3
        </label>
      </div>
    </div>
  </div>
</div>
`;
